# LLM-Based-Document-Q-A-System

./: README.md  api.py  chain.py  ingest.py  prompt.py  pyproject.toml  retriever.py
faiss_index/: index.faiss  index.pkl
